	  
20040706: Changed the navigator gui from tabs to small buttons. Having to page back and forth
          to access all the tabs was becoming tiresome. Ahhh, much better being able to see and
	  select all the buttons at once.

20040710: Rough version of the symbol scanner is now included. Will be improving as time goes on.
          Need to update DOCS.


20040711: Changed the PaintBars chart type to use a custom formula to draw the paint bars. In order
          for it to work, the last step must be a COMP function that is checked to plot. This is the
	  boolean array that will be used to draw the paint bars. If the COMP function returns
	  TRUE than the bar will be considered an up bar. A FALSE value will be a down bar.
	  Need to update DOCS.
	  
	  
	  
0.26
====

20040221: Added new BarData class to libqtstalker. Plot and all plugins were modified to handle the new
          input bar interface. This structural change in preparation for future design changes.

20040222: Added a small current close arrow pointer to the scale area of the main plot. Helps with
          tracking where the last close is located on the scale.
	  
20040224: Moved chart object logic out of Plot:: and split each chart object off into it's own
          class. Moving towards a proper OO framework.

20040228: Moved PlotLine line type logic out of Plot:: and into PlotLine::
          Moving towards a proper OO framework.
	  
20040228: Moved chart type logic out of Plot:: and split each chart type off into it's own
          plugin. We now have chart plugins. Chart plugins now have their own pref dialogs
	  to handle colors and any parms that are specific to that chart style.
	  
20040228: Added new option to MACD plugin. Option controls the osc scaling. True turns on full
          scaling and false reverts to normal scaling.
	  
20040302: Yehaaww! Drag and drop chart objects are working. Needs some polishing and tweaking