@@ -4,8 +4,10 @@ CONFIG += thread warn_on plugin
 QMAKE_CXXFLAGS += -Os
 
 HEADERS += Line.h
+HEADERS += LineDialog.h
 
 SOURCES += Line.cpp
+SOURCES += LineDialog.cpp
 
 TARGET = Line.0.26
 
